@@ -1,10 +1,12 @@
 
-[*] Mon May 20 2002 - netcat (cvs)
+[*] Thu May 23 2002 - netcat (cvs)
 
   o Fixed the udp mode listen, which didn't allow any kind of safe read from
     stdin.
   o Generalized flagset.c to be more a library file.  Fixed some minor bugs
     in the interface.
+  o Fixed a bug in ncprint() which didn't respect the EXIT flag if the
+    verbosity flag was also specified and not satisfied.
 
 
 [*] Wed May 15 2002 - netcat v0.4.0
